--- a/css/diagnostics.css
+++ b/css/diagnostics.css
@@ -245,284 +245,230 @@ a {
   opacity: 1;
 }
 
-.about {
+.diagnostics-page__title {
   margin-top: 30px;
-}
-.about-title {
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 500;
 }
-.about-title img {
+.diagnostics-page__title img {
   margin-right: 10px;
 }
-.about-image {
-  width: 90%;
-  margin: 20px auto;
-}
-.about-image img {
-  width: 100%;
-  border-radius: 10px;
-}
-.about-content {
-  margin-top: 50px;
-}
-.about-content__title {
-  color: #000;
-  font-family: "Montserrat" sans-serif;
-  font-size: 32px;
-  font-weight: 700;
-}
-.about-content__text {
-  margin-top: 30px;
-  font-family: "Montserrat" sans-serif;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 25px;
-  opacity: 0.8;
-}
-.about-content__image {
-  margin: 30px auto;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-}
-.about-content__image img {
-  width: 70%;
-}
 
-.mission {
+.diagnostics {
   margin-top: 50px;
 }
-.mission-title {
-  font-family: "Montserrat" sans-serif;
+.diagnosticstitle {
   font-size: 32px;
   font-weight: 700;
 }
-.mission-content {
-  margin-top: 30px;
+.diagnostics .inform {
+  position: relative;
+  margin-top: 100px;
+  border-radius: 20px;
+  background: #01a1b7;
   display: flex;
-  align-items: flex-end;
   justify-content: space-between;
+  padding: 30px 20px 0;
 }
-.mission-content__text {
-  width: 40%;
-  font-family: "Montserrat" sans-serif;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 25px;
-  opacity: 0.8;
+.diagnostics .inform-image img {
+  height: 110%;
+  position: absolute;
+  bottom: 0;
 }
-.mission-content__image {
-  width: 500px;
-  height: 250px;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  border-radius: 10px;
-  background: radial-gradient(50% 50% at 50% 50%, rgba(1, 161, 183, 0) 2.43%, #01a1b7 100%);
-}
-
-.advantages-wrapper {
-  margin-top: 50px;
-  width: 100%;
-  background: rgba(197, 198, 198, 0.1);
-}
-
-.advantages {
-  padding-top: 50px;
+.diagnostics .inform-content {
+  width: 50%;
   padding-bottom: 50px;
 }
-.advantages-title {
-  font-family: "Montserrat" sans-serif;
-  font-size: 32px;
+.diagnostics .inform-content__title {
+  font-size: 28px;
   font-weight: 700;
+  color: #ffffff;
 }
-.advantages .underline {
-  display: block;
+.diagnostics .inform-content__text {
+  width: 80%;
   margin-top: 20px;
-  width: 160px;
-  height: 6px;
-  background: #f4c93f;
-}
-.advantages-text {
-  margin-top: 50px;
-  font-family: "Montserrat" sans-serif;
   font-size: 18px;
   font-weight: 500;
-  line-height: 25px;
-  opacity: 0.8;
+  line-height: 38px;
+  color: #ffffff;
 }
 
-.advantages-content {
+.equipments {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.advantages-content .card {
-  margin-top: 50px;
-  display: flex;
-  align-items: center;
-}
-.advantages-content .card-image {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #01a1b7;
-}
-.advantages-content .card-content {
-  margin-left: 20px;
-  width: 450px;
-}
-.advantages-content .card-content__title {
-  font-family: "Montserrat" sans-serif;
-  font-size: 20px;
-  font-weight: 700;
-}
-.advantages-content .card-content__text {
-  width: 70%;
-  font-family: Montserrat;
-  font-size: 12px;
-  font-weight: 500;
-}
-
-.doctor-quote {
-  width: 90%;
-  height: 800px;
-  margin: 0 auto;
-  background-image: url(../images/about-us/about-image2.png);
-  background-size: cover;
+.equipments .equipment-item {
+  width: 49%;
+  margin-top: 30px;
   border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: start;
-  padding: 50px;
 }
-.doctor-quote img {
-  height: 40px;
+.equipments .equipment-item__image {
+  position: relative;
+  height: 450px;
+  text-align: center;
+  background-color: #c5c6c6;
+  padding: 20px;
+  border-radius: 10px;
 }
-.doctor-quote__text {
-  width: 70%;
-  margin-top: 20px;
-  color: #fff;
-  font-family: "Montserrat" sans-serif;
-  font-size: 18px;
+.equipments .equipment-item__image img {
+  width: -moz-max-content;
+  width: max-content;
+}
+.equipments .equipment-item__image--title {
+  position: absolute;
+  bottom: 20px;
+  font-size: 22px;
+  font-weight: 700;
+}
+.equipments .equipment-item__image:hover {
+  background-color: #f4c93f;
+}
+.equipments .equipment-item__text {
+  margin-top: 30px;
+  font-size: 14px;
   font-weight: 500;
   line-height: 25px;
 }
-.doctor-quote__author {
-  margin-top: 20px;
-  color: #fff;
-  font-family: "Montserrat" sans-serif;
+
+.licenses {
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+.licenses-title {
+  font-size: 25px;
+}
+.licenses-content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+.licenses-content img {
+  width: 22%;
+}
+.licenses .place-for-pagination {
+  margin-top: 50px;
+}
+
+.information {
+  margin-top: 30px;
+}
+.information-text {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+.information-text p {
+  width: 50%;
   font-size: 20px;
-  font-weight: 600;
-  line-height: 25px;
+  font-weight: 500;
+  line-height: 34px;
+  opacity: 0.5;
 }
 
-.gallery {
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-.gallery-title {
-  font-family: "Montserrat" sans-serif;
-  font-size: 32px;
-  font-weight: 700;
-}
-.gallery .place-for__pagination {
-  margin-top: 50px;
-}
-
-.gallery-images {
-  margin-top: 50px;
-  display: flex;
-  justify-content: space-between;
-}
-.gallery-images .image-wrapper1 {
-  width: 50%;
-}
-.gallery-images .image-wrapper1 img {
-  width: 95%;
-}
-.gallery-images .image-wrapper2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 50%;
-}
-.gallery-images .image-wrapper2 .image-wrapper__child1 {
-  display: flex;
-  justify-content: flex-end;
-}
-.gallery-images .image-wrapper2 .image-wrapper__child1 img {
-  width: 100%;
-}
-.gallery-images .image-wrapper2 .image-wrapper__child2 {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-.gallery-images .image-wrapper2 .image-wrapper__child2 img {
-  width: 48%;
-  height: 95%;
-}
-
-.recomendation-wrapper {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  width: 100%;
-  background: rgba(197, 198, 198, 0.1);
-}
-
-.recomendation-title {
-  font-family: "Montserrat" sans-serif;
-  font-size: 32px;
-  font-weight: 700;
-}
-.recomendation-card {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.recomendation .card {
-  width: 31%;
-  margin-top: 50px;
+.information-box {
+  margin-top: 100px;
   padding: 30px;
+}
+
+.accordion {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 3px solid #c7c7c7;
+}
+.accordion-header {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+.accordion-header__image {
+  position: relative;
+}
+.accordion-header__image .minus-button {
+  position: absolute;
+  transform: translateX(-36px);
+}
+.accordion-content {
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  transition: 0.3s;
+  padding: 30px;
+}
+.accordion-content p {
+  width: 90%;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 31px;
+  opacity: 0.5;
+}
+.accordion-content.accordion.active {
+  height: 200px;
+  padding: 30px;
+}
+
+.tool {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.tool .items-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+.tool .items-wrapper .item {
+  width: 32%;
   border-radius: 10px;
   background: #fff;
+  padding: 30px;
   box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.08);
 }
-.recomendation .card-name {
-  font-family: "Montserrat" sans-serif;
-  font-size: 16px;
-  font-weight: 700;
+.tool .items-wrapper .item-image {
+  width: 100%;
+  height: 300px;
+  text-align: center;
+}
+.tool .items-wrapper .item-image img {
+  width: 70%;
+  height: 70%;
+}
+.tool .items-wrapper .item-image img:last-child {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.tool .items-wrapper .item-title {
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 10px 25px;
+  transform: translateX(-30px);
+  color: #ffffff;
+  background: #01a1b7;
+  border-radius: 0 15px 15px 0;
+}
+.tool .items-wrapper .item-facts {
+  margin-top: 30px;
+  position: relative;
+  padding-left: 15px;
+}
+.tool .items-wrapper .item-facts li {
   margin-top: 10px;
 }
-.recomendation .card-line {
-  margin-top: 15px;
-  margin-bottom: 15px;
+.tool .items-wrapper .item-facts li::before {
+  position: absolute;
   display: block;
-  width: 70%;
-  height: 1px;
-  background: rgba(0, 0, 0, 0.1);
+  margin-top: 5px;
+  transform: translateX(-20px);
+  content: "";
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #01a1b7;
 }
-.recomendation .card-text {
-  margin-top: 20px;
-  text-align: center;
-  font-family: "Montserrat" sans-serif;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 22px;
-}
-.recomendation .place-for__pagination {
-  margin-top: 50px;
-}/*# sourceMappingURL=about-us-page.css.map */
+.tool .place-for-pagination {
+  margin-top: 100px;
+}/*# sourceMappingURL=diagnostics.css.map */
